initial changes for recruiter side of job posting functionality
